--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Build the Docker image
-      run: docker build . --t rosinaosuna/continuous_php_image
+      run: docker build . -t rosinaosuna/continuous_php_image
